// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInput should render 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      />
      <div>
        operator
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <input
          class="input-root form-control"
          data-testid="number-input"
          type="number"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`NumberInput should render with data 1`] = `
<div>
  <div
    class="criteria-statement"
  >
    <div
      class="form-group form-group-autofit"
    >
      <div
        class="form-group-item entity-name form-group-item-label form-group-item-shrink"
      />
      <div
        class="form-group-item display-value form-group-item-label form-group-item-shrink"
      >
        Name
      </div>
      <div>
        operator
      </div>
      <div
        class="form-group-item form-group-item-shrink"
      >
        <input
          class="input-root form-control"
          data-testid="number-input"
          type="number"
          value="Test Test"
        />
      </div>
    </div>
  </div>
</div>
`;
